Fix header wrap and shrink

--- a/style.css
+++ b/style.css
@@ -4,39 +4,41 @@ body {
     display: flex;
     flex-direction: column;
     font-family: 'Roboto', sans-serif;
+    min-width: fit-content;
 }
 
-.hero,
-.content,
-.quote,
-.cta {
-    padding: 8px;
-    flex: 1;
-    justify-content: space-around;
-}
-
-
-.header, .hero, .footer {
+.header {
     display: flex;
     justify-content: space-around;
     align-items: center;
     background-color: #1F2937;
     color: #F9FAF8;
-    padding: 16px;
+    padding: 8px;
 }
 
-.header > .logo {
+.logo {
     font-size: 24px;
     font-weight: 700;
 }
 
-ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    display: flex;
-    gap: 16px;
 
+/*
+.hero {
+    height: 300px;
+}
+
+*/
+
+
+/* list/link styles all good, move back up later */
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding-left: 20px;
+    display: flex;
+    gap: 32px;
+    justify-content: space-evenly;
+    flex: 1;
 }
 
 a {
@@ -44,17 +46,39 @@ a {
     color: #F9FAF8;
 }
 
-.hero_title {
-    font-size: 48px;
-    font-weight: 900;
-}
 
 
 .hero {
-    flex: 1 1 0;
+    background-color: yellow;
+    padding: 8px;
+}
+
+.hero_left {
+    background-color: lightskyblue;
+}
+
+.hero_image {
+    background-color: lavender;
+}
+
+.content {
+    background-color: lightpink;
 }
 
 .quote {
-    background-color: #E5E7EB;
+    background-color: palegreen;
 }
 
+.cta {
+    background-color: gold;
+}
+
+.footer {
+    background-color: azure;
+}
+
+.content,
+.quote,
+.cta {
+    flex: 1;
+}
